Fixed Text Alignment

--- a/assets/css/4-pages/_header.sass
+++ b/assets/css/4-pages/_header.sass
@@ -35,13 +35,14 @@ header
     height: 0.5px
     clear: both
   .heading-container
-    position: absolute
-    top: 50%
-    margin-top: -75px
-    left: 0px
+    position: relative
+    height: 625px
     width: 100%
-    text-align: center
-    .content
+    .box
+      position: absolute
+      left: 50%
+      top: 50%
+      transform: translateX(-50%) translateY(-50%)
       h2
         text-align: center
         font-size: 50px
@@ -64,7 +65,6 @@ header
 
 @media screen and (max-width:645px)
   header
-    height: 670px
     .logo
       text-align: center
       float: none
@@ -77,7 +77,8 @@ header
       margin-left: 0px
       margin-right: 25px
     .heading-container
-      .content
+      height: 470px
+      .box
         h2
           font-size: 40px
           color: white
@@ -86,6 +87,7 @@ header
   header
     height: 600px
     .heading-container
-      .content
+      height: 400px
+      .box
         h2
           font-size: 30px
